# tracepipe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  bench_memory.py  bench_overhead.py  bench_scale.py  run_all.py
docs/: changelog.md  contributing.md  index.md
docs/api/: contracts.md  core.md  debug.md  index.md
docs/examples/: data-validation.md  ml-pipeline.md
docs/getting-started/: installation.md  modes.md  quickstart.md
docs/guide/: cell-provenance.md  concepts.md  contracts.md  health-checks.md  reports.md  row-tracing.md  snapshots.md
examples/: benchmark_fillna_pattern.py  benchmark_overhead.py  comprehensive_demo.py  demo.py  demo_50k_scale_test.py  demo_5m_stress_test.py  demo_v2.py  ml_pipeline_demo.py  ml_preprocessing_demo.py  red_team_test.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/contracts/: index.html
site/api/core/: index.html
site/api/debug/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/examples/data-validation/: index.html
site/examples/ml-pipeline/: index.html
site/getting-started/installation/: index.html
site/getting-started/modes/: index.html
site/getting-started/quickstart/: index.html
site/guide/cell-provenance/: index.html
site/guide/concepts/: index.html
site/guide/contracts/: index.html
site/guide/health-checks/: index.html
site/guide/reports/: index.html
site/guide/row-tracing/: index.html
site/guide/snapshots/: index.html
site/search/: search_index.json
tests/: conftest.py  test_api.py  test_concurrency.py  test_contracts.py  test_convenience_debug.py  test_core.py  test_edge_cases.py  test_export.py  test_html_export.py  test_integration.py  test_integration_scenarios.py  test_io_operations.py  test_lineage_store.py  test_lineage_through_merge.py  test_numpy_instrumentation.py  test_pandas_inst.py  test_pandas_instrumentation.py  test_public_api.py  test_row_identity.py  test_row_provenance.py  test_safety.py  test_sklearn_instrumentation.py  test_snapshot.py  test_value_capture.py  test_version_matrix.py
tracepipe/: __init__.py  api.py  context.py  contracts.py  convenience.py  core.py  debug.py  safety.py  snapshot.py  value_provenance.py
tracepipe/export/: __init__.py  json_export.py
tracepipe/instrumentation/: __init__.py  apply_capture.py  filter_capture.py  indexer_capture.py  merge_capture.py  numpy_inst.py  pandas_inst.py  series_capture.py  sklearn_inst.py
tracepipe/storage/: __init__.py  base.py  lineage_store.py  row_identity.py
tracepipe/utils/: __init__.py  value_capture.py
tracepipe/visualization/: __init__.py  html_export.py  html_viz.py
